changes to display order in Home Page

--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,9 @@
                 </article>
 
                 <aside>
-                    <h3>Home Page</h3>
+                    <h3>The current CEO of the company is:
+                                    {{ ceo.name }}
+                    </h3>
                 </aside>
 
             </div> <!-- #main -->
