making boostrap work

--- a/templates/index.html
+++ b/templates/index.html
@@ -98,7 +98,7 @@
               <p class="lead">Please update the employee based on his or her ID:</p>
               <ul>
                 <p>
-                      ID of employee: <input type="number" name="ID">
+                      ID of employee: <input type="number" name="ID_update" value="0">
                 </p>
                 <p>
                       Name of employee: <input type="text" name="update_name">
@@ -134,7 +134,7 @@
               <p class="lead">Please delete an employee based on his or her ID:</p>
               <ul>
                 <p>
-                      ID of employee: <input type="number" name="ID">
+                      ID of employee: <input type="number" name="ID_delete">
                 </p>
                 <button type="submit">Submit</button>
               </ul>
