--- a/static/css/scrolling-nav.css
+++ b/static/css/scrolling-nav.css
@@ -5,7 +5,16 @@
  */
 
 header {
-  padding: 154px 0 100px;
+  padding: 100px 0 50px;
+}
+
+.bg-primary {
+  padding: 80px 0 10px;
+  padding-left: 100px;
+}
+
+.employee {
+  color: white
 }
 
 @media (min-width: 992px) {
@@ -15,5 +24,5 @@ header {
 }
 
 section {
-  padding: 150px 0;
+  padding: 50px 0;
 }
